IOS: Fix wrong background color on 'About' page

--- a/src/app/about/about.component.tns.scss
+++ b/src/app/about/about.component.tns.scss
@@ -5,6 +5,11 @@
     font-size: 16;
 }
 
+HtmlView {
+    // For iOS
+    background-color: $page-color;
+}
+
 #app-name {
     font-weight: bold;
 }
